# mdfh-scp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
examples/: article_example.py  basic_usage.py
src/mdfh/: __init__.py  exceptions.py  models.py  solver.py
tests/: test_solver.py
