[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mdfh-scp"
version = "0.1.0"
description = "A Multidimensional Fitness Heuristic solver for Set Covering Problems."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sadra Gholami", email = "sadra.gholami2003@gmail.com" }
]
keywords = [
    "set-covering",
    "optimization",
    "heuristic",
    "mdfh",
    "operations-research"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/sadraagholami/mdfh-scp"
Repository = "https://github.com/sadraagholami/mdfh-scp"
Issues = "https://github.com/sadraagholami/mdfh-scp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mdfh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
